Issue #1062 fix: In menu Notes to Teacher icon text was overlapping with the mute icon

--- a/player/public/css/app/style.css
+++ b/player/public/css/app/style.css
@@ -1161,7 +1161,7 @@ body{
     padding-top:2%; 
     font-size:0.8em; 
     font-weight: normal; 
-    padding: 0% 15%;
+    padding: 0% 12%;
 }
 
 .gc-mute-bg {
